# platform.core.telephony.libtapi

./: AUTHORS  CMakeLists.txt  libtapi.manifest  project.config  tapi-3.0.pc.in  tapi.pc.in
TC/: making_new_tet_scen.py  tet_scen  tslist.txt
TC/telephony_TC/: Makefile  tet_scen  tetbuild.cfg  tetclean.cfg  tetexec.cfg
TC/telephony_TC/CFG/: cfg_util.c  cfg_util.h  uts_tel_cfg_default_configuration.c  uts_tel_cfg_default_configuration.h  uts_tel_get_cfg_akey.c  uts_tel_get_cfg_akey.h  uts_tel_get_cfg_hidden_menu_access.c  uts_tel_get_cfg_hidden_menu_access.h  uts_tel_get_cfg_msl_info.c  uts_tel_get_cfg_msl_info.h  uts_tel_get_cfg_serving_carrier.c  uts_tel_get_cfg_serving_carrier.h  uts_tel_get_cfg_vocoder_option.c  uts_tel_get_cfg_vocoder_option.h  uts_tel_set_cfg_hidden_menu_access.c  uts_tel_set_cfg_hidden_menu_access.h  uts_tel_set_cfg_serving_carrier.c  uts_tel_set_cfg_serving_carrier.h  uts_tel_set_cfg_vocoder_option.c  uts_tel_set_cfg_vocoder_option.h  uts_tel_verify_cfg_akey.c  uts_tel_verify_cfg_akey.h
TC/telephony_TC/call/: README  call_common.h
TC/telephony_TC/call/unit/: makefile  tapi_callback.c  tapi_callback.h  tslist  uts_tapi_check_status.c  uts_tapi_check_status.h  uts_tel_activate_call_ccbs.c  uts_tel_activate_call_ccbs.h  uts_tel_answer_call.c  uts_tel_answer_call.h  uts_tel_deflect_call.c  uts_tel_deflect_call.h  uts_tel_exe_call_explicit_transfer.c  uts_tel_exe_call_explicit_transfer.h  uts_tel_exe_call_flash.c  uts_tel_exe_call_flash.h  uts_tel_exe_call_mo.c  uts_tel_exe_call_mo.h  uts_tel_exit_call_emergency_mode.c  uts_tel_exit_call_emergency_mode.h  uts_tel_get_call_act_line.c  uts_tel_get_call_act_line.h  uts_tel_get_call_conf_list.c  uts_tel_get_call_conf_list.h  uts_tel_get_call_duration.c  uts_tel_get_call_duration.h  uts_tel_get_call_privacy_mode.c  uts_tel_get_call_privacy_mode.h  uts_tel_get_call_status.c  uts_tel_get_call_status.h  uts_tel_get_call_time.c  uts_tel_get_call_time.h  uts_tel_hold_call.c  uts_tel_hold_call.h  uts_tel_join_call.c  uts_tel_join_call.h  uts_tel_release_call.c  uts_tel_release_call.h  uts_tel_release_call_all.c  uts_tel_release_call_all.h  (+16 more)
TC/telephony_TC/common/unit/: makefile  tapi_common.h  tslist  uts_tel_check_service_ready.c  uts_tel_check_service_ready.h  uts_tel_deinit.c  uts_tel_deinit.h  uts_tel_deregister_event.c  uts_tel_deregister_event.h  uts_tel_init.c  uts_tel_init.h  uts_tel_register_event.c  uts_tel_register_event.h  uts_tel_request_tunnel.c  uts_tel_request_tunnel.h
TC/telephony_TC/gprs/unit/: gprs_common.c  gprs_common.h  makefile  tet_macro.h  tet_scen  tslist  uts_tel_activate_gprs_pdp.c  uts_tel_activate_gprs_pdp.h  uts_tel_control_gprs_btdun_pin.c  uts_tel_control_gprs_btdun_pin.h  uts_tel_deactivate_gprs_pdp.c  uts_tel_deactivate_gprs_pdp.h
TC/telephony_TC/misc/unit/: async_util.c  async_util.h  makefile  misc_callback_util.c  misc_callback_util.h  tslist  uts_tapi_misc_NAM_info_get.c  uts_tapi_misc_NAM_info_get.h  uts_tapi_misc_NAM_info_set.c  uts_tapi_misc_NAM_info_set.h  uts_tapi_misc_me_serial_num_get.c  uts_tapi_misc_me_serial_num_get.h  uts_tapi_misc_timezone_getinfo.c  uts_tapi_misc_timezone_getinfo.h  (+2 more)
TC/telephony_TC/network/: README
TC/telephony_TC/power/: uts_tapi_power_phone_on_off.c  uts_tapi_power_phone_on_off.h
TC/telephony_TC/sim/: README  sim_common.h
TC/telephony_TC/sms/: README  sms_common.h
TC/telephony_TC/ss/: README  ss_common.h
debian/: changelog  control  libslp-tapi-0.install.in  libslp-tapi-dev.install.in  rules
doc/: README.txt  libtapi_doc.h
include/: ITapiCall.h  ITapiGps.h  ITapiModem.h  ITapiNetText.h  ITapiNetwork.h  ITapiOem.h  ITapiPS.h  ITapiPhonebook.h  ITapiSap.h  ITapiSat.h  ITapiSim.h  ITapiSs.h  SLP_TelephonyFW_PG.h  TapiUtility.h  TelCall.h  TelDefines.h  TelMisc.h  TelNetwork.h  TelOem.h  TelPower.h  TelSat.h  TelSatEnvelope.h  TelSatObj.h  TelSatProactvCmd.h  TelSim.h  TelSms.h  TelSs.h  tapi.h  tapi_call.h  tapi_common.h  tapi_event.h  tapi_events.h  tapi_gps.h  tapi_modem.h  tapi_network.h  tapi_phonebook.h  tapi_sap.h  tapi_sat.h  tapi_sim.h  tapi_sms.h  (+2 more)
include/common/: TapiCommon.h  TapiEvent.h  TapiUtility.h  TelCall.h  TelData.h  TelDefines.h  TelDisplay.h  TelErr.h  TelMisc.h  TelNetText.h  TelNetwork.h  TelPower.h  TelSat.h  TelSatEnvelope.h  TelSatObj.h  TelSatProactvCmd.h  TelSim.h  TelSs.h  TelUtility.h  tel_cs_conn.h
include/porting/: tel_marshaler.h
include/private/: tapi_log.h  tapi_private.h
include/tapi/: .gitignore  ITapiCall.h  ITapiCfg.h  ITapiData.h  ITapiGps.h  ITapiMisc.h  ITapiNetText.h  ITapiNetwork.h  ITapiOmadm.h  ITapiPS.h  ITapiPower.h  ITapiProductivity.h  ITapiSat.h  ITapiSim.h  ITapiSound.h  ITapiSs.h  tapi_proxy.h  tapi_proxy_internal.h
introspection/: modem.xml
packaging/: libslp-tapi.changes  libslp-tapi.spec  libtapi.spec  libtapi3.spec
src/: common.h  common_tapi_lib.c  common_tapi_lib_internal.c  tapi-lib.xml  tapi_call.c  tapi_common.c  tapi_event.c  tapi_gps.c  tapi_log.h  tapi_modem.c  tapi_network.c  tapi_oem.c  tapi_phonebook.c  tapi_private.h  tapi_proxy_call.c  tapi_proxy_cfg.c  tapi_proxy_common.c  tapi_proxy_data.c  tapi_proxy_gprs.c  tapi_proxy_gps.c  tapi_proxy_misc.c  tapi_proxy_nettext.c  tapi_proxy_network.c  tapi_proxy_omadm.c  tapi_proxy_power.c  tapi_proxy_productivity.c  tapi_proxy_sat.c  tapi_proxy_sim.c  tapi_proxy_sound.c  tapi_proxy_ss.c  tapi_sap.c  tapi_sat.c  tapi_sim.c  tapi_sms.c  tapi_ss.c
src/porting/: tel_marshaler.c
src/test_apps/: Makefile  tapi_call_test.c  tapi_cdma_data_test.c  tapi_cfg_test.c  tapi_gps_test.c  tapi_misc_test.c  tapi_nw_test.c  tapi_power_test.c  tapi_ps_test.c  tapi_sat_test.c  tapi_sim_test.c  tapi_sms_test.c  tapi_sms_test.h  tapi_sms_util.c  tapi_sms_util.h  tapi_sound_test.c  tapi_ss_test.c  tapi_svc_test.c  tapi_test_app.c  tapi_test_utility.h
test_src/: CMakeLists.txt  call.c  call.h  gps.c  gps.h  main.c  menu.c  menu.h  modem.c  modem.h  network.c  network.h  oem.c  oem.h  phonebook.c  phonebook.h  sat.c  sat.h  sim.c  sim.h  sms.c  sms.h  sms_util.c  sms_util.h  sms_util_cdma.c  sms_util_cdma.h  ss.c  ss.h
(+252 files in other folders)
